[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "astro-crispy"
version = "1.3.0-dev0"
description = "Computational Ridge Identification with SCMS for Python"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Michael Chun-Yuan Chen", email = "mcyc@users.noreply.github.com" }]
dependencies = [
    "numpy",
    "scipy",
    "astropy",
    "joblib",
    "scikit-image",
    "scikit-learn",
    "importlib-metadata; python_version < '3.8'",
]
readme = "README.md"

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]

[tool.setuptools.packages.find]
include = ["crispy*", "crispy.*"]

[project.urls]
Source = "https://github.com/mcyc/crispy"

