[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "crispy-learn"
version = "1.3.1"
description = "Computational Ridge Identification with SCMS for Python"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Michael Chun-Yuan Chen", email = "mcyc@users.noreply.github.com" }]
dependencies = [
    "numpy>=1.24",
    "scipy",
    "astropy",
    "joblib",
    "scikit-image>=0.16",
    "scikit-learn",
    "matplotlib",
    "plotly"
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.3.7",
    "sphinx-rtd-theme>=1.3", #,<2.0
    "sphinx-autodoc-typehints>=2.3.0",
    "nbsphinx>=0.9.6",
    "sphinx-copybutton>=0.5.2",
    "pydata-sphinx-theme>=0.15.3",
    "numpydoc>=1.2.0", # ",<2.0"
    "sphinx-issues>=2.0",
    "sphinxext-opengraph>=0.9"
]

[tool.setuptools.packages.find]
include = ["crispy*", "crispy.*"]

[project.urls]
Source = "https://github.com/mcyc/crispy"

